-
Type:
Bug
-
Status: Closed
-
Priority:
Trivial
-
Resolution: Fixed
-
Affects Version/s: 0.9.2
-
Fix Version/s: 0.9.3
-
Component/s: Build Process
-
Labels:None
-
Environment:
Apple LLVM version 6.0 (clang-600.0.54) (based on LLVM 3.5svn)
Target: x86_64-apple-darwin14.0.0
Thread model: posix
-
Patch Info:Patch Available
The ntohll macro is already defined in /usr/include/sys/_endian.h on Mac OS X.
In file included from gen-cpp/shared_constants.cpp:7:
In file included from gen-cpp/shared_constants.h:10:
In file included from gen-cpp/shared_types.h:14:
../../lib/cpp/src/thrift/protocol/TProtocol.h:131:11: warning: 'ntohll' macro redefined
# define ntohll(n) ( (((uint64_t)ntohl((uint32_t)n)) << 32) + ntohl((uint32_t)(n >> 32)) )
^
/usr/include/sys/_endian.h:140:9: note: previous definition is here
#define ntohll(x) __DARWIN_OSSwapInt64(x)
^