THRIFT-2907 - macro ntohll defined only when needed

Client: C++
Patch: Jon Parise

This closes #334